--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>ArgentumWare</title>    
+</head>
+<style>
+</style>
 <body>
 <h1>ARGENTUMWARE</h1>
+<div></div>
 <p>Coming soon! (to a theater near you)</p>
 </body>
 </html>
