--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <h1>ARGENTUMWARE</h1>
 <div></div>
 <p>Coming soon! (to a theater near you)</p>
-<img src="Logo.png">
+<img src="/Images/Logo.png">
 </body>
 </html>
