--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>ArgentumWare</title>    
-</head>
-<style>
-</style>
-<body>
-<h1>ARGENTUMWARE</h1>
-<div></div>
-<p>Coming soon! (to a theater near you)</p>
-<img src="/AuragentumWare.github.io/Images/Logo.png">
-</body>
+  <head>
+    <title>ArgentumWare</title>    
+  </head>
+  
+  <style>
+  </style>
+  
+  <body>
+    <h1>ARGENTUMWARE</h1>
+    <div></div>
+    <p>Coming soon! (to a theater near you)</p>
+    <img src="/AuragentumWare.github.io/Images/Logo.png" width=10%>
+  </body>
 </html>
