--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </style>
   
   <body>
-    <h1>ARGENTUMWARE</h1>
+    <header>
+      <h1>AuragentumWare</h1>
+    </header>
     <div></div>
     <p>Coming soon! (to a theater near you)</p>
     <img src="/AuragentumWare.github.io/Images/Logo.png" width=10%>
