--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   </head>
   
   <style>
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      padding: 12px 16px;
+      z-index: 1;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
   </style>
   
   <body>
@@ -15,5 +33,13 @@
     <div></div>
     <p>Coming soon! (to a theater near you)</p>
     <img src="/AuragentumWare.github.io/Images/Logo.png" width=10%>
+    
+    <div class="dropdown">
+      <span>Mouse over me</span>
+      <div class="dropdown-content">
+        <p>Hello World!</p>
+      </div>
+    </div>
+    
   </body>
 </html>
