--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       position: relative;
       display: inline-block;
       width=20%
+      background-color: #f9f9f9;
     }
 
     .dropdown-content {
