Added app.css to index.html

--- a/index.html
+++ b/index.html
@@ -5,37 +5,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/Favicon.png">
   </head>
   
-  <style>
-    .dropdown {
-      position: relative;
-      display: inline-block;
-      width=20%
-      background-color: #f9f9f9;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      min-width: 160px;
-      box-shadow: 4px 8px 16px 0px rgba(0,0,0,0.2);
-      padding: 12px 16px;
-      z-index: 1;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-  </style>
-  
   <body>
+    <link rel="stylesheet" href="app.css">
     <header>
       <h1>AuragentumWare</h1>
     </header>
     <div></div>
     <p>Coming soon! (to a theater near you)</p>
     <img src="/AuragentumWare.github.io/Images/Logo.png" width=10%>
-    
     <div class="dropdown">
       <span>Mouse over me</span>
       <div class="dropdown-content">
