Fixed CSS reference

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="/CSS/index.css">
     <header>
       <h1>AuragentumWare</h1>
     </header>
