Fixed spelling error

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ArgentumWare</title>   
+    <title>AuragentumWare</title>   
     <link rel="icon" type="image/png" sizes="32x32" href="/Favicon.png">
     <link rel="stylesheet" href="/CSS/index.css">
   </head>
