Included alignment.css in index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <title>AuragentumWare</title>   
     <link rel="icon" type="image/png" sizes="32x32" href="/Favicon.png">
     <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="/CSS/alignment.css
   </head>
   
   <body>
     <img src="/AuragentumWare.github.io/Images/Logo.png" width=10%>
-    
+  
     <div class="dropdown">
       <span>Mouse over me</span>
       <div class="dropdown-content">
