--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>AuragentumWare</title>   
     <link rel="icon" type="image/png" sizes="32x32" href="/Favicon.png">
     <link rel="stylesheet" href="/CSS/index.css">
-    <link rel="stylesheet" href="/CSS/alignment.css
+    <link rel="stylesheet" href="/CSS/alignment.css">
   </head>
   
   <body>
