--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <div class="dropdown">
       <span>Mouse over me</span>
       <div class="dropdown-content">
-        <p>
+        <ul>
             <a href="/pricing.html">Pricing</a>
-        </p>
+            <a href="/pricing.html">Pricing</a>
+        </ul>
         </div>
     </div>
     
