--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <span>Mouse over me</span>
       <div class="dropdown-content">
         <ul>
-            <a href="/pricing.html">Pricing</a>
-            <a href="/pricing.html">Pricing</a>
+            <li><a href="/pricing.html">Pricing</a></li>
+            <li><a href="/pricing.html">Pricing</a></li>
         </ul>
         </div>
     </div>
