--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
   
   <body>
-    <img src="/AuragentumWare.github.io/Images/Logo.png" width=10%>
+    <img src="/Images/Logo.png" width=10%>
   
     <div class="dropdown">
-      <span>Mouse over me</span>
+      <span>Order</span>
       <div class="dropdown-content">
         <ul>
             <li><a href="/pricing.html">Pricing</a></li>
-            <li><a href="/pricing.html">Pricing</a></li>
+            <li><a href="/Order.html">Order</a></li>
         </ul>
         </div>
     </div>
