--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ArgentumWare</title>    
+    <title>ArgentumWare</title>   
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
   </head>
   
   <style>
