--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ArgentumWare</title>   
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="auragentumware.github.io/Images/favicon.ico">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="/Images/favicon.ico">
   </head>
   
   <style>
