Created page for pricing with appropriate links

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div class="dropdown">
       <span>Mouse over me</span>
       <div class="dropdown-content">
-        <p>Hello World!</p>
-      </div>
+        <p>
+            <a href="/pricing.html">Pricing</a>
+        </p>
+        </div>
     </div>
     
   </body>
