--- a/pricing.html
+++ b/pricing.html
@@ -4,10 +4,12 @@
         <title>AuragentumWare</title>
         <link rel="icon" type="image/png" sizes="32x32" href="/Favicon.png">
         <link rel="stylesheet" href="/CSS/pricing.css">
+        <link href="//db.onlinewebfonts.com/c/6a9c6944fe8451dd397fe9d0763a4c88?family=OCR+A+Std" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header>
-            <h1>PRICING</h1>
+            <h1 >Pricing</h1>
         </header>
+        <p>Test</p>
     </body>
 </html>
