--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <title>AuragentumWare</title>   
     <link rel="icon" type="image/png" sizes="32x32" href="/Favicon.png">
-    <link rel="stylesheet" href="/CSS/index.css">
+    <link rel="stylesheet" href="/CSS/dropdown.css">
     <link rel="stylesheet" href="/CSS/alignment.css">
+    <link rel="stylesheet" href="/CSS/index.html">
   </head>
   
   <body>
