--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,7 @@
     <head>
         <title>AuragentumWare</title>
         <link rel="icon" type="image/png" sizes="32x32" href="/Favicon.png">
-        <link rel="stylesheet" href="/CSS/pricing.css">
+        <link rel="stylesheet" href="/CSS/index.css">
         <link href="//db.onlinewebfonts.com/c/6a9c6944fe8451dd397fe9d0763a4c88?family=OCR+A+Std" rel="stylesheet" type="text/css"/>
     </head>
     <body>
