Fixed filetype error

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/Favicon.png">
     <link rel="stylesheet" href="/CSS/dropdown.css">
     <link rel="stylesheet" href="/CSS/alignment.css">
-    <link rel="stylesheet" href="/CSS/index.html">
+    <link rel="stylesheet" href="/CSS/index.css">
   </head>
   
   <body>
