--- a/pricing.html
+++ b/pricing.html
@@ -10,6 +10,6 @@
         <header>
             <h1>Pricing</h1>
         </header>
-        <p>Test</p>
+        <h3 class ="serif">SOFTWARE</h3>
     </body>
 </html>
