--- a/pricing.html
+++ b/pricing.html
@@ -10,6 +10,8 @@
         <header>
             <h1>Pricing</h1>
         </header>
+        <div class="slide-left">
         <h3>SOFTWARE</h3>
+        </div>
     </body>
 </html>
