--- a/Order.html
+++ b/Order.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="/CSS/index.css">
+    </head>
+    <body>
+        <h1>Place an order!</h1>
+    </body>
+</html>
