--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   
   <body>
-    <h1>AuragentumWare</h1>
+    <div class="typewriter">    
+        <h1>AuragentumWare</h1>
+    </div>
     <img src="/Images/Logo.png" width=10%>
   
     <div class="dropdown">
