Updated typewriter effect

--- a/Order.html
+++ b/Order.html
@@ -4,6 +4,8 @@
         <link rel="stylesheet" href="/CSS/index.css">
     </head>
     <body>
-        <h1>Place an order!</h1>
+        <div class="typewriter">
+            <h1>Place an order!</h1>
+        </div>
     </body>
 </html>
