Added favicon & title

--- a/Order.html
+++ b/Order.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>AuragentumWare</title>
         <link rel="stylesheet" href="/CSS/index.css">
+        <link rel="icon" type="image/png" sizes="32x32" href="/Favicon.png">
     </head>
     <body>
         <div class="typewriter">
