--- a/Order.html
+++ b/Order.html
@@ -9,5 +9,7 @@
         <div class="typewriter">
             <h1>Place an order!</h1>
         </div>
+        <form action="/order.php">
+        </form>
     </body>
 </html>
