--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>AuragentumWare</title>   
     <link rel="icon" type="image/png" sizes="32x32" href="/Favicon.png">
     <link rel="stylesheet" href="/CSS/dropdown.css">
+    <script src="/Javascript/dropdown.js"></script>
     <link rel="stylesheet" href="/CSS/alignment.css">
     <link rel="stylesheet" href="/CSS/index.css">
   </head>
