--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <img src="/Images/Logo.png" width=10%>
   
-    <div class="dropdown">
+    <div class="dropdown" id="dropdown1">
       <span>Order</span>
       <div class="dropdown-content">
         <ul>
