--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <img src="/Images/Logo.png" width=10%>
   
-    <div class="dropdown" id="dropdown1">
+    <div class="dropdown" onmouseover="this.style.height = "100%";">
       <span>Order</span>
       <div class="dropdown-content">
         <ul>
